# django-wireguard

./: .gitignore  .gitlab-ci.yml  Dockerfile.test  LICENCE  MANIFEST.in  README.rst  manage.py  requirements.txt  setup.cfg
django_wireguard/: __init__.py  admin.py  apps.py  forms.py  models.py  settings.py  sync_wg.py  utils.py  validators.py  wireguard.py
django_wireguard/management/commands/: clear_private_keys.py  create_peer.py  delete_peers.py  setup_interface.py
django_wireguard/migrations/: 0001_initial.py
django_wireguard/static/js/: inject_qrcode.js
django_wireguard/templates/django_wireguard/: wireguardpeer_change_form.html  wireguardpeer_inspect.html
django_wireguard/templatetags/: django_wireguard_filters.py
django_wireguard/tests/: test_models.py
django_wireguard/tests/testapp/: settings.py  urls.py
django_wireguard/wagtail/: __init__.py  admin.py
