[metadata]
name = django-wireguard
version = 0.1.3
description = A Django app for managing WireGuard Interfaces.
long_description = file: README.rst
url = https://gitlab.com/thatsed/django-wireguard
author = Alessandro Romani
author_email = romani.ae98@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires = 
    Django>=2.2
	pyroute2>=0.5.14
    cryptography>=3.2.1
